src/test/resources/30/single/opf/valid/collection-preview.opf
<?xml version="1.0" encoding="UTF-8"?>
<package xmlns="http://www.idpf.org/2007/opf" version="3.0" unique-identifier="uid">
    <metadata xmlns:dc="http://purl.org/dc/elements/1.1/">
        <dc:identifier id="uid">urn:uuid:550e8400-e29b-41d4-a716-446667441231</dc:identifier>
        <dc:title>Lorem Ipsum</dc:title>
        <dc:language>la</dc:language>
        <dc:date>2014-08-29</dc:date>
        <meta property="dcterms:modified">2014-08-29T15:47:00Z</meta>
    </metadata>
    <manifest>
        <item id="nav" href="nav.xhtml" media-type="application/xhtml+xml" properties="nav"/>
        <item id="c1" href="chapter1.xhtml" media-type="application/xhtml+xml"/>
        <item id="c2" href="chapter2.xhtml" media-type="application/xhtml+xml"/>
        <item id="c3" href="chapter3.xhtml" media-type="application/xhtml+xml"/>
        <item id="c4" href="chapter4.xhtml" media-type="application/xhtml+xml"/>
        <item id="css" href="stylesheet.css" media-type="text/css"/>
    </manifest>
    <spine>
        <itemref idref="c1"/>
        <itemref idref="c2"/>
        <itemref idref="c3"/>
        <itemref idref="c4"/>
    </spine>
    <collection role="preview">
        <collection role="manifest">
            <link href="chapter1.xhtml" media-type="application/xhtml+xml"/>
            <link href="chapter2.xhtml" media-type="application/xhtml+xml"/>
            <link href="stylesheet.css" media-type="text/css"/>
        </collection>
        <link href="chapter1.xhtml"/>
        <link href="chapter2.xhtml"/>
        <link href="chapter3.xhtml#preview"/>
    </collection>
</package>
