src/test/resources/30/single/opf/invalid/idx-collection-toplevel-indexgroup.opf
<?xml version="1.0" encoding="UTF-8"?>
<package xmlns="http://www.idpf.org/2007/opf" version="3.0" unique-identifier="uid">
    <metadata xmlns:dc="http://purl.org/dc/elements/1.1/">
        <dc:identifier id="uid">urn:uuid:550e8400-e29b-41d4-a716-446667441231</dc:identifier>
        <dc:title>EPUBCheck Test</dc:title>
        <dc:language>en</dc:language>
        <dc:date>2011-09-01</dc:date>
        <meta property="dcterms:modified">2011-09-01T17:18:00Z</meta>
    </metadata>
    <manifest>
        <item id="c1" href="content.xhtml" properties="nav" media-type="application/xhtml+xml"/>
        <item id="idx-a01" href="subjectIndex-a01.xhtml" media-type="application/xhtml+xml"/>
        <item id="idx-a02" href="subjectIndex-a02.xhtml" media-type="application/xhtml+xml"/>
        <item id="idx-a03" href="subjectIndex-a03.xhtml" media-type="application/xhtml+xml"/>
        <item id="idx-b" href="subjectIndex-b.xhtml" media-type="application/xhtml+xml"/>
        <item id="idx-c01" href="subjectIndex-c01.xhtml" media-type="application/xhtml+xml"/>
        <item id="idx-c02" href="subjectIndex-c02.xhtml" media-type="application/xhtml+xml"/>
        <item id="idx-c03" href="subjectIndex-c03.xhtml" media-type="application/xhtml+xml"/>
        <item id="idx-d" href="subjectIndex-d.xhtml" media-type="application/xhtml+xml"/>
        <item id="idx-e" href="subjectIndex-e.xhtml" media-type="application/xhtml+xml"/>
        <item id="idx2" href="index2.xhtml" media-type="application/xhtml+xml"/>
        <item id="css" href="style.css" media-type="text/css"/>
    </manifest>
    <spine>
        <itemref idref="c1"/>
    </spine>
    <collection role="index-group">
        <link href="index1.xhtml"/>
        <link href="index2.xhtml"/>
    </collection>

</package>
